Enable Disqus for old blog

--- a/weblog/2009-11-15/home-automation-project-part-iv/index.html
+++ b/weblog/2009-11-15/home-automation-project-part-iv/index.html
@@ -97,7 +97,7 @@
             
             var disqus_identifier = 'node/10';
             
-            if(document.location.hostname.indexOf('arktronic.com') == 0) {
+            if(document.location.hostname.indexOf('oldblog.arktronic.com') == 0) {
 
                 /* * * DON'T EDIT BELOW THIS LINE * * */
                 (function() {
