--- a/weblog/2011-05-06/new-windows-phone-marketplace-policies/index.html
+++ b/weblog/2011-05-06/new-windows-phone-marketplace-policies/index.html
@@ -84,7 +84,7 @@
             
             var disqus_identifier = 'node/18';
             
-            if(document.location.hostname.indexOf('arktronic.com') == 0) {
+            if(document.location.hostname.indexOf('oldblog.arktronic.com') == 0) {
 
                 /* * * DON'T EDIT BELOW THIS LINE * * */
                 (function() {
