--- a/weblog/2011-06-07/get-your-network-ipv6-ready-ease/index.html
+++ b/weblog/2011-06-07/get-your-network-ipv6-ready-ease/index.html
@@ -78,7 +78,7 @@ ip6tables -I FORWARD -i v6to4 -p icmpv6 --icmpv6-type echo-request -j DROP
             
             var disqus_identifier = 'node/19';
             
-            if(document.location.hostname.indexOf('arktronic.com') == 0) {
+            if(document.location.hostname.indexOf('oldblog.arktronic.com') == 0) {
 
                 /* * * DON'T EDIT BELOW THIS LINE * * */
                 (function() {
