--- a/weblog/2012-08-05/how-do-clean-install-windows-7-or-8-samsung-chronos-laptops/index.html
+++ b/weblog/2012-08-05/how-do-clean-install-windows-7-or-8-samsung-chronos-laptops/index.html
@@ -94,7 +94,7 @@
             
             var disqus_identifier = 'node/27';
             
-            if(document.location.hostname.indexOf('arktronic.com') == 0) {
+            if(document.location.hostname.indexOf('oldblog.arktronic.com') == 0) {
 
                 /* * * DON'T EDIT BELOW THIS LINE * * */
                 (function() {
