--- a/weblog/2012-09-08/good-windows-console-environment/index.html
+++ b/weblog/2012-09-08/good-windows-console-environment/index.html
@@ -144,7 +144,7 @@ alias nano='echo &quot;Using ne instead of nano!&quot;; sleep 2s; ne'
             
             var disqus_identifier = 'node/28';
             
-            if(document.location.hostname.indexOf('arktronic.com') == 0) {
+            if(document.location.hostname.indexOf('oldblog.arktronic.com') == 0) {
 
                 /* * * DON'T EDIT BELOW THIS LINE * * */
                 (function() {
