--- a/weblog/2012-09-20/authentication-part-two-are-your-users-passwords-secure/index.html
+++ b/weblog/2012-09-20/authentication-part-two-are-your-users-passwords-secure/index.html
@@ -82,7 +82,7 @@ Level 4 - Hashing and salting using modern PBKDFs - This is best.</p>
             
             var disqus_identifier = 'node/30';
             
-            if(document.location.hostname.indexOf('arktronic.com') == 0) {
+            if(document.location.hostname.indexOf('oldblog.arktronic.com') == 0) {
 
                 /* * * DON'T EDIT BELOW THIS LINE * * */
                 (function() {
