--- a/weblog/2013-09-09/beware-of-silent-failures/index.html
+++ b/weblog/2013-09-09/beware-of-silent-failures/index.html
@@ -74,7 +74,7 @@
             
             var disqus_identifier = 'node/37';
             
-            if(document.location.hostname.indexOf('arktronic.com') == 0) {
+            if(document.location.hostname.indexOf('oldblog.arktronic.com') == 0) {
 
                 /* * * DON'T EDIT BELOW THIS LINE * * */
                 (function() {
