--- a/weblog/2013-11-06/how-to-run-an-elevated-privilege-as-administrator-app-on-windows-startup/index.html
+++ b/weblog/2013-11-06/how-to-run-an-elevated-privilege-as-administrator-app-on-windows-startup/index.html
@@ -76,7 +76,7 @@ UAC.ShellExecute &quot;C:\Program Files\OpenVPN\bin\openvpn-gui.exe&quot;, &quot
             
             var disqus_identifier = 'node/38';
             
-            if(document.location.hostname.indexOf('arktronic.com') == 0) {
+            if(document.location.hostname.indexOf('oldblog.arktronic.com') == 0) {
 
                 /* * * DON'T EDIT BELOW THIS LINE * * */
                 (function() {
