--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ The first and second parts of this blog post series are an overview of automated
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
 var disqus_shortname = 'arktronic'; // required: replace example with your forum shortname
 
-if(document.location.hostname.indexOf('arktronic.com') == 0) {
+if(document.location.hostname.indexOf('oldblog.arktronic.com') == 0) {
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function () {
