--- a/page2/index.html
+++ b/page2/index.html
@@ -144,7 +144,7 @@ It's no different this time: I've retired my Drupal-based blog, mainly because I
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
 var disqus_shortname = 'arktronic'; // required: replace example with your forum shortname
 
-if(document.location.hostname.indexOf('arktronic.com') == 0) {
+if(document.location.hostname.indexOf('oldblog.arktronic.com') == 0) {
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function () {
