--- a/page5/index.html
+++ b/page5/index.html
@@ -140,7 +140,7 @@
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
 var disqus_shortname = 'arktronic'; // required: replace example with your forum shortname
 
-if(document.location.hostname.indexOf('arktronic.com') == 0) {
+if(document.location.hostname.indexOf('oldblog.arktronic.com') == 0) {
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function () {
