--- a/weblog/2010-06-15/yes-i-would-like-wp7-dev-device-please/index.html
+++ b/weblog/2010-06-15/yes-i-would-like-wp7-dev-device-please/index.html
@@ -77,7 +77,7 @@ Sasha</p>
             
             var disqus_identifier = 'node/13';
             
-            if(document.location.hostname.indexOf('arktronic.com') == 0) {
+            if(document.location.hostname.indexOf('oldblog.arktronic.com') == 0) {
 
                 /* * * DON'T EDIT BELOW THIS LINE * * */
                 (function() {
