--- a/weblog/2010-11-23/ugly-side-windows-phone-7-marketplace/index.html
+++ b/weblog/2010-11-23/ugly-side-windows-phone-7-marketplace/index.html
@@ -78,7 +78,7 @@
             
             var disqus_identifier = 'node/15';
             
-            if(document.location.hostname.indexOf('arktronic.com') == 0) {
+            if(document.location.hostname.indexOf('oldblog.arktronic.com') == 0) {
 
                 /* * * DON'T EDIT BELOW THIS LINE * * */
                 (function() {
