--- a/weblog/2011-02-17/relax-microsoft-has-not-banned-open-source-from-marketplace/index.html
+++ b/weblog/2011-02-17/relax-microsoft-has-not-banned-open-source-from-marketplace/index.html
@@ -73,7 +73,7 @@
             
             var disqus_identifier = 'node/17';
             
-            if(document.location.hostname.indexOf('arktronic.com') == 0) {
+            if(document.location.hostname.indexOf('oldblog.arktronic.com') == 0) {
 
                 /* * * DON'T EDIT BELOW THIS LINE * * */
                 (function() {
