--- a/weblog/2011-07-25/redone-blog/index.html
+++ b/weblog/2011-07-25/redone-blog/index.html
@@ -69,7 +69,7 @@
             
             var disqus_identifier = 'node/5';
             
-            if(document.location.hostname.indexOf('arktronic.com') == 0) {
+            if(document.location.hostname.indexOf('oldblog.arktronic.com') == 0) {
 
                 /* * * DON'T EDIT BELOW THIS LINE * * */
                 (function() {
