--- a/weblog/2011-08-02/good-app-vs-great-app-resilience/index.html
+++ b/weblog/2011-08-02/good-app-vs-great-app-resilience/index.html
@@ -76,7 +76,7 @@
             
             var disqus_identifier = 'node/20';
             
-            if(document.location.hostname.indexOf('arktronic.com') == 0) {
+            if(document.location.hostname.indexOf('oldblog.arktronic.com') == 0) {
 
                 /* * * DON'T EDIT BELOW THIS LINE * * */
                 (function() {
