--- a/weblog/2012-05-09/visual-studio-11s-redesign-awkwardness/index.html
+++ b/weblog/2012-05-09/visual-studio-11s-redesign-awkwardness/index.html
@@ -71,7 +71,7 @@
             
             var disqus_identifier = 'node/25';
             
-            if(document.location.hostname.indexOf('arktronic.com') == 0) {
+            if(document.location.hostname.indexOf('oldblog.arktronic.com') == 0) {
 
                 /* * * DON'T EDIT BELOW THIS LINE * * */
                 (function() {
