--- a/weblog/2012-05-16/how-properly-get-windows-phone-apps-assembly-version/index.html
+++ b/weblog/2012-05-16/how-properly-get-windows-phone-apps-assembly-version/index.html
@@ -72,7 +72,7 @@
             
             var disqus_identifier = 'node/26';
             
-            if(document.location.hostname.indexOf('arktronic.com') == 0) {
+            if(document.location.hostname.indexOf('oldblog.arktronic.com') == 0) {
 
                 /* * * DON'T EDIT BELOW THIS LINE * * */
                 (function() {
